More CSS/HTML changes
Changed the table a little bit, stylized the web form, the button on the top right now goes to the web form.

Next is adding to the web form, and trying to save information that is added and then after that is adding that saved and submitted data to the table.

Might also stylize the main page more so that it isnt just a table. I'm feeling pretty good right now though.

--- a/final1/global.css
+++ b/final1/global.css
@@ -34,9 +34,11 @@ header {
 }
 
 footer {
-  height: 100px;
+  position: fixed;
+  left: 0;
+  bottom: 0;
   width: 100%;
-  background: #333;
+  background-color: #333;
   color: white;
   text-align: center;
 }
